saturn-account-macros/tests/compile_fail/zero_copy_type_mismatch.stderr
error[E0308]: mismatched types
 --> tests/compile_fail/zero_copy_type_mismatch.rs:8:5
  |
8 |     data: BorshAccount<'info, u64>,
  |     ^^^^ expected `Account<'_, u64>`, found `AccountLoader<'_, u64>`
  |
  = note: expected struct `Account<'info, u64>`
             found struct `AccountLoader<'_, u64>`
